--- a/coolgameshop-front/public/index.html
+++ b/coolgameshop-front/public/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+<html lang="ru">
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>Cool Game Shop</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+</head>
+<body>
+<header>
+    <nav>
+        <a class="navbar-brand" href="index.html">CoolGameShop</a>
+        <a class="text-menu" href="#home">Главная</a>
+        <a class="text-menu" href="about.html">О нас</a>
+        <a class="text-menu" href="contact.html">Контакты</a>
+    </nav>
+</header>
+
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root">
+</div>
+</body>
 </html>
+
+
